@@ -6,9 +6,9 @@ mkdir -p gui/deploy
 set -e
 
 # Edit version
-version=0.4.9.9.3
+version=0.5.0
 
-jarFile="/media/sf_vm_shared_ubuntu/Bitsquare-$version.jar"
+jarFile="/media/sf_vm_shared_ubuntu/Bisq-$version.jar"
 
 # Note: fakeroot needs to be installed on linux
 $JAVA_HOME/bin/javapackager \
@@ -16,26 +16,35 @@ $JAVA_HOME/bin/javapackager \
     -Bruntime="$JAVA_HOME/jre" \
     -BappVersion=$version \
     -Bcategory=Network \
-    -Bemail=team@bitsquare.io \
+    -Bemail=team@bisq.io \
     -BlicenseType=GPLv3 \
     -BlicenseFile=LICENSE \
     -Bicon=package/linux/icon.png \
     -native deb \
-    -name Bitsquare \
-    -title Bitsquare \
-    -vendor Bitsquare \
+    -name Bisq \
+    -title Bisq \
+    -vendor Bisq \
     -outdir gui/deploy \
     -srcfiles $jarFile:$jdkfixFile \
     -srcfiles package/linux/LICENSE \
-    -appclass io.bitsquare.app.BitsquareAppMain \
-    -outfile Bitsquare
+    -appclass io.bisq.gui.app.BisqAppMain \
+    -BjvmOptions=-Xss1280k \
+    -outfile Bisq
+     
+# when we have support for security manager we use that     
+#     \
+#    -BjvmOptions=-Djava.security.manager \
+#    -BjvmOptions=-Djava.security.debug=failure \
+#    -BjvmOptions=-Djava.security.policy=file:bisq.policy
+#     -srcfiles "core/src/main/resources/bisq.policy" \
+
 
 # uncomment because the build VM does not support alien
-#sudo alien -r -c -k gui/deploy/bundles/bitsquare-$version.deb
+#sudo alien -r -c -k gui/deploy/bundles/bisq-$version.deb
 
-cp "gui/deploy/bundles/bitsquare-$version.deb" "/home/mk/Desktop/Bitsquare-64bit-$version.deb"
-mv "gui/deploy/bundles/bitsquare-$version.deb" "/media/sf_vm_shared_ubuntu/Bitsquare-64bit-$version.deb"
-#mv "bitsquare-$version-1.x86_64.rpm" "/media/sf_vm_shared_ubuntu/Bitsquare-64bit-$version.rpm"
+cp "gui/deploy/bundles/bisq-$version.deb" "/home/mk/Desktop/Bisq-64bit-$version.deb"
+mv "gui/deploy/bundles/bisq-$version.deb" "/media/sf_vm_shared_ubuntu/Bisq-64bit-$version.deb"
+#mv "bisq-$version-1.x86_64.rpm" "/media/sf_vm_shared_ubuntu/Bisq-64bit-$version.rpm"
 rm -r gui/deploy/
 
 cd package/linux
